fix mobile overflow

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -30,6 +30,7 @@ section {
 	position: relative;
 	flex: initial;
 	word-break: break-word;
+	overflow: hidden;
 	table {
 		thead {
 			th {
